@@ -1,5 +1,6 @@
 1.2.2
  * fix symlinks under data dir not working (CASSANDRA-5185)
+ * fix bug in compact storage metadata handling (CASSANDRA-5189)
 
 1.2.1
  * stream undelivered hints on decommission (CASSANDRA-5128)
